# dnd-vtt-open

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SESSION_HANDOFF.md  pyproject.toml  setup.py
.github/: pull_request_template.md
api/: http_api.py  schemas.py
api_contracts/: commands.py  events.py  packs.py
app/: backup_import_config.py  backup_rate_limit_config.py  backup_signature_config.py  disaster_recovery.py  observability.py  ops_state_store.py  session_store_config.py
content/: asset_manifest_schema.json  character_import.py  enemy_pack_loader.py  tutorial_loader.py
deploy/: Dockerfile.backend  dnd-vtt.service  docker-compose.yml  nginx.conf.example
desktop-electron/: main.js  package-lock.json  package.json  preload.js
dnd_vtt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: alpha-validation.md  architecture.md  content-policy.md  migration-playbook.md  operations.md  packaging.md  roadmap.md
engine/: combat_tracker.py  game_state.py  inventory_conditions.py  map_state.py  session_store.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
net/: p2p_sync.py  signaling_service.py
scripts/: run_ci_checks.sh  run_desktop.sh  run_disaster_recovery_drill.py  run_legacy_tk.sh  run_modern_ui.sh
tests/: test_backup_import_config.py  test_backup_rate_limit_config.py  test_character_import.py  test_command_dispatcher.py  test_disaster_recovery_drill.py  test_engine.py  test_inventory_conditions.py  test_migration_runner.py  (+10 more)
(+73 files in other folders)
