[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dnd-vtt"
version = "0.1.0"
description = "Open-source modular 2D DND virtual tabletop MVP"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "DND VTT Contributors"}]
dependencies = [
  "pydantic>=2.6",
  "fastapi>=0.115",
  "uvicorn>=0.34",
  "websockets>=14",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "pytest-cov>=5.0", "ruff>=0.8", "httpx>=0.27"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
